--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                       {{menuName}}
+                    <a href="#" ng-bind="menuName">
+                       <!--{{menuName}}-->
                     </a>
                 </li>
                 <li ng-repeat="menu in menuList">
-                    <a href="{{menu.href}}" ng-click="getContent($event, menu.href)">{{menu.name}}</a>
+                    <a href="{{menu.href}}" ng-click="getContent($event, menu.href)" ng-bind="menu.name">
+                        <!--{{menu.name}}-->
+                    </a>
                 </li>
             </ul>
         </div>
