--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
     <!-- jQuery -->
     <script src="required/js/jquery.js"></script>
-
+    <script src="required/js/cache/cache.js"></script>
+    
     <!-- Bootstrap Core JavaScript -->
     <script src="required/js/bootstrap.min.js"></script>
     <script src="required/js/angular.min.js"></script>
